# llm-observability

./: README.md  pyproject.toml
llm_observability/: __init__.py  __main__.py  config.py  database.py  main.py
llm_observability/api/: __init__.py  conversations.py  metrics.py  responses.py  search.py  tools.py
llm_observability/services/: __init__.py
llm_observability/static/css/: style.css
llm_observability/templates/: base.html  dashboard.html  search.html
llm_observability/templates/conversations/: detail.html  list.html
llm_observability/templates/responses/: detail.html  list.html
llm_observability/views/: __init__.py  conversations.py  dashboard.py  responses.py  search.py
