[project]
name = "llm-observability"
version = "0.1.0"
description = "LLM observability and tracing UI for llm database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlite-utils>=3.37",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
llm-observability = "llm_observability.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_observability*"]

[tool.setuptools.package-data]
llm_observability = ["templates/**/*", "static/**/*"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
